<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_recognition">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.myapp.sensordatacollection.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recognition"
        android:name="com.myapp.sensordatacollection.ui.recognition.SceneSelectFragment"
        android:label="@string/title_recognition"
        tools:layout="@layout/fragment_scene_select" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.myapp.sensordatacollection.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />


</navigation>